fix main grid layout to not overflow single page

--- a/styles.css
+++ b/styles.css
@@ -174,15 +174,14 @@ input {
 }
 
 main {
-    grid-row: 2;
-    grid-column: 2;
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
 
     display: grid;
-    grid-template-columns: 75% 25%;
+    grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 1rem;
 
-    padding: 1rem .5rem 0 .5rem;
     background-color: hsl(336, 74%, 95%);
     border-top: 1px solid #9d174d;
     outline: 1px solid #9d174d;
@@ -221,7 +220,7 @@ main {
 
 article {
     display: grid;
-    display: none;
+    
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, auto);
     align-items: center;
